Created the workflow default with 2 jobs, build-backend and build-frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,3 +27,8 @@ jobs:
             npm run build
             exit 1
 
+workflows:
+  default:
+    jobs:
+      - build-frontend
+      - build-backend
