--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            exit 1
+          #  exit 1
 
   build-backend:
     docker:
@@ -25,7 +25,7 @@ jobs:
             cd backend
             npm install
             npm run build
-            exit 1
+          #  exit 1
 
 workflows:
   default:
