--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,37 @@ jobs:
             npm run build
           #  exit 1
 
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Run frontend test 
+          command: | 
+            cd frontend
+            npm install
+            npm run test
+
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Run backend test
+          command: |
+            cd backend
+            npm install
+            npm run test
+
+
 workflows:
   default:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
